Use a more sane build path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,10 +29,11 @@ file(GLOB PROTO_FILES ${PROTO_DIR}/*.proto)
 message(STATUS "Proto dir: ${PROTO_DIR}")
 message(STATUS "Proto files: ${PROTO_FILES}")
 
-set(DEVEL_PREFIX ${PROJECT_SOURCE_DIR}/../../build/${PROJECT_NAME}/devel/include/${PROJECT_NAME})
+# set(DEVEL_PREFIX ${PROJECT_SOURCE_DIR}/../../build/${PROJECT_NAME}/devel/include/${PROJECT_NAME})
+set(DEVEL_PREFIX ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME})
 
-set(PROTO_GEN_CPP_DIR ${DEVEL_PREFIX})
-set(PROTO_GEN_PY_DIR ${DEVEL_PREFIX}/py)
+set(PROTO_GEN_CPP_DIR ${DEVEL_PREFIX}/generated/)
+set(PROTO_GEN_PY_DIR ${DEVEL_PREFIX}/generated_py)
 file(MAKE_DIRECTORY ${PROTO_GEN_CPP_DIR})
 file(MAKE_DIRECTORY ${PROTO_GEN_PY_DIR})
 
