Disable python build as colcon doesn't like it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,33 +33,35 @@ message(STATUS "Proto files: ${PROTO_FILES}")
 set(DEVEL_PREFIX ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME})
 
 set(PROTO_GEN_CPP_DIR ${DEVEL_PREFIX}/generated/)
-set(PROTO_GEN_PY_DIR ${DEVEL_PREFIX}/generated_py)
+# set(PROTO_GEN_PY_DIR ${DEVEL_PREFIX}/generated_py)
 file(MAKE_DIRECTORY ${PROTO_GEN_CPP_DIR})
-file(MAKE_DIRECTORY ${PROTO_GEN_PY_DIR})
+# file(MAKE_DIRECTORY ${PROTO_GEN_PY_DIR})
 
 set(PROTO_GEN_CPP_FILES "")
 set(PROTO_GEN_PY_FILES "")
 foreach(PROTO_FILE ${PROTO_FILES})
   get_filename_component(PROTO_NAME ${PROTO_FILE} NAME_WE)
   list(APPEND PROTO_GEN_CPP_FILES ${PROTO_GEN_CPP_DIR}/${PROTO_NAME}.pb.h ${PROTO_GEN_CPP_DIR}/${PROTO_NAME}.pb.cc)
-  list(APPEND PROTO_GEN_PY_FILES ${PROTO_GEN_PY_DIR}/${PROTO_NAME}_pb2.py)
+  # list(APPEND PROTO_GEN_PY_FILES ${PROTO_GEN_PY_DIR}/${PROTO_NAME}_pb2.py)
 endforeach(PROTO_FILE ${PROTO_FILES})
 
 message(STATUS " gen files: ${PROTO_GEN_CPP_FILES}")
 
 add_custom_command(
   OUTPUT ${PROTO_GEN_CPP_FILES} ${PROTO_GEN_PY_FILES}
-  COMMAND ${PROTOBUF_PROTOC_EXECUTABLE} --proto_path=${PROTO_DIR} --cpp_out=${PROTO_GEN_CPP_DIR} --python_out=${PROTO_GEN_PY_DIR} ${PROTO_FILES}
+  # COMMAND ${PROTOBUF_PROTOC_EXECUTABLE} --proto_path=${PROTO_DIR} --cpp_out=${PROTO_GEN_CPP_DIR} --python_out=${PROTO_GEN_PY_DIR} ${PROTO_FILES}
+  COMMAND ${PROTOBUF_PROTOC_EXECUTABLE} --proto_path=${PROTO_DIR} --cpp_out=${PROTO_GEN_CPP_DIR} ${PROTO_FILES}
   DEPENDS ${PROTOBUF_PROTOC_EXECUTABLE} ${PROTO_FILES}
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
 set_source_files_properties(${PROTO_GEN_CPP_FILES} PROPERTIES GENERATED TRUE)
-set_source_files_properties(${PROTO_GEN_PY_FILES} PROPERTIES GENERATED TRUE)
+# set_source_files_properties(${PROTO_GEN_PY_FILES} PROPERTIES GENERATED TRUE)
 
 add_custom_target(
   ${PROJECT_NAME}_generate_headers
-  DEPENDS ${PROTO_GEN_CPP_FILES} ${PROTO_GEN_PY_FILES}
+  # DEPENDS ${PROTO_GEN_CPP_FILES} ${PROTO_GEN_PY_FILES}
+  DEPENDS ${PROTO_GEN_CPP_FILES}
 )
 
 # Declare a C++ library
@@ -88,11 +90,6 @@ install(DIRECTORY ${PROTO_GEN_CPP_DIR}/
   DESTINATION include
   FILES_MATCHING PATTERN "*.h"
 )
-
-# install(DIRECTORY ${PROTO_GEN_PY_DIR}/
-#   DESTINATION ${CATKIN_PACKAGE_PYTHON_DESTINATION}
-#   FILES_MATCHING PATTERN "*.py"
-# )
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
