Update package info

--- a/package.xml
+++ b/package.xml
@@ -7,8 +7,8 @@
 
   <url type="website">http://github.com/TWALL9/otomo_msgs/</url>
 
-  <maintainer email="thomaswallis0@gmail.com">tom</maintainer>
-  <author email="thomaswallis0@gmail.com">tom</author>
+  <maintainer email="thomaswallis0@gmail.com">Tom Wallis</maintainer>
+  <author email="thomaswallis0@gmail.com">Tom Wallis</author>
 
   <license>MIT</license>
 
