--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,7 +89,7 @@ install(
 )
 
 install(DIRECTORY ${PROTO_GEN_CPP_DIR}/
-  DESTINATION include/${PROJECT_NAME}
+  DESTINATION include/${PROJECT_NAME}/${PROJECT_NAME}
   FILES_MATCHING PATTERN "*.h"
 )
 
